Try specify hover for contact anchor to fix
not showing accent

--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,10 @@ nav li {
   text-decoration: none;
 }
 
+.contact a:hover {
+  color: #f83;
+}
+  
 .contact i {
   width: 32px;
   display: block;
